script/test/error/wrong-operator.jly

(define make-num-seq
  (lambda [n]
    (if (> n 10)
      ()
      (cons n (make-num-seq (5.1 n))))))

